Spacing fixes, dial button white on dark theme, fix field width

--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -352,6 +352,7 @@ limitations under the License.
     border-right: 0;
     border-radius: 0;
     margin-top: 0;
+    border-color: #6F7882;
 
     input {
         font-size: 18px;
@@ -371,6 +372,7 @@ limitations under the License.
 
 .mx_InviteDialog_dialPad {
     width: 224px;
+    margin-top: 16px;
     margin-left: auto;
     margin-right: auto;
 }
