--- a/res/css/views/voip/_DialPad.scss
+++ b/res/css/views/voip/_DialPad.scss
@@ -16,12 +16,14 @@ limitations under the License.
 
 .mx_DialPad {
     display: grid;
-    gap: 16px;
+    row-gap: 16px;
+    column-gap: 0px;
+    margin-top: 24px;
+    margin-left: auto;
+    margin-right: auto;
 
     /* squeeze the dial pad buttons together horizontally */
-    grid-template-columns: 2fr 1fr 2fr;
-    margin-left: 32px;
-    margin-right: 32px;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .mx_DialPad_button {
@@ -59,7 +61,7 @@ limitations under the License.
         mask-repeat: no-repeat;
         mask-size: 20px;
         mask-position: center;
-        background-color: $primary-bg-color;
+        background-color: #FFF; // on all themes
         mask-image: url('$(res)/img/element-icons/call/voice-call.svg');
     }
 }
